# GenAI-Course-Nov-Fly

./: README.md  requirements.txt
Module_0/llm/: deploy_hugging_face.py  smaller_modesl.py  test_pre_trained_llm.py  test_rfhf_trained_llm.py  test_sft_trained_llm.py
Module_1/: test.py
Module_1/12_database_connectivity/: csv_loader.py  db_config.py  myfaker.py
Module_1/12_database_connectivity/datasets/: customers.csv  orders.csv
Module_1/12_database_connectivity/sqlalchemy_approach/: connector.py  data_manager.py  models.py  usage_example.py
Module_2/: test_secrets_manager.py
Module_2/dynamodb/: README.md  dynamodb_diagrams.html  dynamodb_guide.md  dynamodb_operations.py  requirements.txt
Module_2/dynamodb/dynamo_streams/: dynamodb_streams_diagrams.html  dynamodb_streams_guide.md  simple_dynamodb_streams.py
Module_2/lambda-rds-api_gateway/customers-api/: lambda_function.py
Module_2/lambda-rds-api_gateway/deployment-docs/: DEPLOYMENT_GUIDE.md
Module_2/lambda-rds-api_gateway/generic-query-executor/: lambda_function.py
Module_2/lambda-rds-api_gateway/orders-api/: lambda_function.py
Module_2/lambda-rds-api_gateway/s3-lambda-integration/: s3_lambda.py
Module_2/lambda-rds-project/generic-query-executor/: lambda_function.py
Module_2/project/: LAMBDA_RETRY_MECHANISM_GUIDE.md
Module_2/project/1_vendor_file_generation/: VEND001_20251221_034236.csv  VEND002_20251221_034236.csv  VENDOR_FILES_README.md  generate_vendor_csvs.py  vendors_master.csv
Module_2/project/2_dynamo_rds_table_creation/: DATABASE_SETUP_README.md  dynamodb_setup.py  rds_schema.sql
Module_2/project/3_s3_lambda_dynamo_integration/: Dockerfile  ECR_LAMBDA_DEPLOYMENT.md  lambda_csv_parser.py  lambda_function.py  requirements.txt
Module_2/project/4_dynamo_streams_validaiton_rds/: DYNAMODB_STREAMS_VALIDATOR_GUIDE.md  Dockerfile  lambda_function.py  lambda_product_validator.py  requirements.txt
Module_2/project/5_SQS_upload_error_file_s3_and_SNS_notification/: Dockerfile  SQS_ERROR_PROCESSOR_GUIDE.md  lambda_error_processor.py  requirements.txt
Module_2/project/guide/: deploy.sh
Module_3/2_learn_open_ai_apis/: 1_quick_start.py  3_openai_prompt_executor.py
Module_3/2_learn_open_ai_apis/prompt_advisor/: README.md  prompt_advisor.py
Module_3/3_aws_prompt_management/: README_AWS_Bedrock.md
Module_3/prompt_advisor/: fast_api_main.py  quick_start.py  test.py
Module_3/prompt_advisor/aws/: main.py
Module_4/: appendix  appendix.md
Module_4/1_extraction/1_docling/: 0_README.md  2_README.md  2_extract_docling_huggingface.py  3_README_VLM.md  3_extract_docling_with_vlm.py  4_README_OPENAI_VISION.md  4_extract_docling_openai_vision.py
Module_4/1_extraction/1_llama_parse/: extract_llamaparse_openai_vision.py
Module_4/1_extraction/2_docling/: docling_gold_standard.py  docling_gold_standard_advanced.py
Module_4/1_extraction/2_unstructured/: extract_unstructured_openai_vision.py
Module_4/1_extraction/3_llama_parse/: extract_llamaparse_openai_vision.py
Module_4/1_extraction/docling/: 0_README.md  2_README.md  2_extract_docling_huggingface.py  3_README_VLM.md  3_extract_docling_with_vlm.py  4_README_OPENAI_VISION.md  4_extract_docling_openai_vision.py
Module_4/2_chunking/: 1_fixed_chunker.py  2_recursive_chunker.py  3_sentence_chunker.py  4_document_chunker.py  5_semantic_chunker.py  6_page_chunker.py  README_CHUNKING_STRATEGIES.md
Module_4/aws_ray/: README.md  page_87.md
Module_4/aws_ray/1_prerequisites/: PREREQUISITES_CHECKS_GUIDE.md  check_prerequisites.py  (+1 more)
Module_4/aws_ray_kube/: page_11.md  page_93.md
Module_4/chunking/: chunk_semantic_gold.py  chunk_semantic_hybrid.py
Module_4/embeddings/: starter.py  understanding_embeddings.md
Module_4/evals/: 1_prepare_dataset.py  2_ingest.py  3_eval.py
Module_4/project/ray-document-pipeline/: README.md  pyproject.toml
Module_4/project/ray-document-pipeline/deploy/cloudformation/: 1_ray-pipeline-cloudformation-public.yaml  EXPLAINED.md  cloudformation-parameters.json
Module_4/project/ray-document-pipeline/deploy/prerequisites/: README.md  __init__.py  check.py  check_windows.py
Module_4/project/ray-document-pipeline/deploy/steps/: __init__.py  orchestrator.py  step1_deploy_stack.py  step2_download_pdfs.py  step3_upload_to_s3.py
Module_4/project/ray-document-pipeline/docker/: .dockerignore  Dockerfile  sitecustomize.py
Module_4/project/ray-document-pipeline/pipeline/core/: __init__.py  config.py  encoding.py  logging.py  s3.py  workspace.py
Module_4/project/ray-document-pipeline/pipeline/docs/: ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md  TROUBLESHOOTING.md
Module_4/project/ray-document-pipeline/pipeline/lambda/: s3_event.py
Module_4/project/ray-document-pipeline/pipeline/orchestration/: __init__.py  dynamodb.py  orchestrator.py  tasks.py
Module_4/project/ray-document-pipeline/pipeline/stages/: __init__.py  embed.py  enrich.py  load.py
Module_4_notebooks/: chunking_nb.ipynb  meta_data_enrich.ipynb
Module_4_notebooks/layout_identification_extraction/: .env_sample  Docling.ipynb  Docling_completed.ipynb
project-1/1_meta_data_ingestion_as_vectors/: config.py  ingest_pinecone.py  ingest_to_s3_vectors.py
project-1/2_metadata_retrival_as_query/: README_API.md  nl2sql_api.py  nl2sql_api_pinecone.py  pinecone_retriever.py  s3_vector_retriever.py  test_nl2sql_api.py  test_nl2sql_api_pinecone.py
project-1/3_agent/: logger.py  nl2sql_agent_pinecone.py  nl2sql_config.py  nl2sql_middleware_adaptive.py  nl2sql_middleware_pinecone.py  nl2sql_semantic_recall.py  pinecone_store.py  requirements_agent_pinecone.txt
(+70 files in other folders)
