[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

# ─────────────────────────────────────────────────────────────────────────────
# PROJECT METADATA
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "ray-rag-pipeline"
version = "2.2.0"
description = "Production RAG document processing pipeline on Ray + ECS Fargate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Prudhvi Akella", email = "prudhvi.akella@thoughtworks.com"},
]
keywords = ["rag", "ray", "pipeline", "ecs", "genai", "pinecone", "docling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ─────────────────────────────────────────────────────────────────────────────
# DEPENDENCIES
# ─────────────────────────────────────────────────────────────────────────────
# Core dependencies needed to run the pipeline. Docling + PyTorch are heavy
# (~3 GB) so they are in the main deps since the pipeline won't work without
# them. For CI or lightweight testing, use [test] extras only.
dependencies = [
    # ── AWS ──
    "boto3>=1.34",

    # ── Ray ──
    "ray[default]>=2.20",

    # ── Document processing ──
    "docling>=2.0",
    "pandas>=2.0",

    # ── LLM & Embeddings ──
    "openai>=1.12",

    # ── Vector database ──
    "pinecone>=5.0",

    # ── Resilience ──
    "tenacity>=8.2",

    # ── Progress ──
    "tqdm>=4.65",
]

# ── Optional dependency groups ───────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "moto[s3,dynamodb,ecs,secretsmanager]>=5.0",   # AWS service mocks
    "ipython>=8.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "moto[s3,dynamodb]>=5.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# PACKAGE DISCOVERY
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["core*", "stages*", "orchestration*"]
exclude = ["deploy*", "docker*", "docs*", "tests*"]

# ─────────────────────────────────────────────────────────────────────────────
# RUFF — Linter + Formatter
# ─────────────────────────────────────────────────────────────────────────────
# Replaces flake8, isort, black in a single tool.
# Run:  ruff check .        (lint)
#       ruff format .       (format)
#       ruff check --fix .  (auto-fix)
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long — handled by formatter
    "B008",   # Do not perform function call in argument defaults (common in FastAPI)
    "SIM108", # Use ternary operator — often less readable
    "RUF012", # Mutable class attributes — too noisy for dataclasses
    "N806",   # Variable in function should be lowercase — conflicts with constants like PASS_COUNT
    "N802",   # Function name should be lowercase — conflicts with Ray @ray.remote naming
]

[tool.ruff.lint.isort]
known-first-party = ["core", "stages", "orchestration"]

[tool.ruff.lint.per-file-ignores]
# Deploy scripts use broad exception handling intentionally
"deploy/**/*.py" = ["B901", "E722"]
# Prerequisites scripts have their own style
"deploy/prerequisites/*.py" = ["N", "E722"]

# ─────────────────────────────────────────────────────────────────────────────
# PYTEST
# ─────────────────────────────────────────────────────────────────────────────
# Run:  pytest                     (all tests)
#       pytest -m "not slow"       (skip integration tests)
#       pytest --cov=core          (coverage for core/)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests that take >10s (integration tests, real API calls)",
    "aws: marks tests that need AWS credentials or moto mocks",
    "ray: marks tests that start a local Ray cluster",
]
addopts = [
    "-ra",                  # Show summary of all non-passing tests
    "--strict-markers",     # Error on unknown markers
    "--tb=short",           # Short tracebacks
    "-q",                   # Quiet output
]
filterwarnings = [
    "ignore::DeprecationWarning:docling.*",
    "ignore::DeprecationWarning:ray.*",
]

# ─────────────────────────────────────────────────────────────────────────────
# COVERAGE
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["core", "stages", "orchestration"]
omit = [
    "*/tests/*",
    "deploy/*",
    "docker/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
